<resources>
    <string name="app_name">Reserve Me</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_all_tables">AllTablesActivity</string>
    <string name="large_text">
        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_table_details">TableDetailsActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    
    <string name="time_available">5PM</string>
    <string name="reserve">Reserve</string>
    <string name="table_details">Seats: 5</string>

    <string name="enter_name">Enter Name</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_required_seats">Enter Required Seats</string>

    <string name="confirm_reservation">Confirm</string>
    <string name="cancel_reservation">Cancel</string>

    <string name="sharing_intent_subject">ReserveMe Invitation!</string>
    <string name="sharing_intent_body">You were invited to join the table!</string>
    <string name="sharing_intent">Share via</string>
    <string name="share">Share</string>
</resources>
