<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.root.reserveme.ReserveTableActivity">

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_phone_number"
        android:inputType="phone" />

    <EditText
        android:id="@+id/email_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email_address"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/required_seats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_required_seats"
        android:inputType="number"
        android:maxLength="2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/table_details" />

    <Button
        android:id="@+id/confirm_reservation_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="confirmReservation"
        android:text="@string/confirm_reservation" />

    <Button
        android:id="@+id/cancel_reservation_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="cancelReservation"
        android:text="@string/cancel_reservation" />

</LinearLayout>
